<resources>
    <string name="app_name">schedule</string>
    <string name="page_name_setup">设置</string>
    <string name="page_name_change_password">修改密码</string>
    <string name="page_name_login">登录账号</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="registered">注册新账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_name">用户名:</string>
    <string name="phone_number">手机号码:</string>
    <string name="captcha">验证码:</string>
    <string name="send_captcha">发送验证码</string>
    <string name="new_password">新的密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="confirm_the_changes">确认修改</string>
    <string name="contentDescription">装饰用图</string>
    <string name="hint">请输入</string>
    <string name="hint1">请填写日程的标题</string>
    <string name="hint2">请填写日程的内容</string>
    <string name="hint3">请再次输入新密码</string>
    <string name="text">我的任务类别:</string>
    <string name="study">学习</string>
    <string name="entertainment">娱乐</string>
    <string name="pe">体育</string>
    <string name="examination">考试</string>
    <string name="text2">默认提醒时间：提前</string>
    <string name="text3">默认提醒方式：闹铃</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="plus">+</string>
    <string name="change_password">修改密码</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="schedule_management">日程安排</string>
    <string name="exit">退出账号</string>
    <string name="today_date">当前日期:</string>
    <string name="sch_manage_time">日程时间:</string>
    <string name="sch_manage_title">日程标题:</string>
    <string name="sch_manage_content">日程内容:</string>
    <string name="reminder_interval">提醒间隔:</string>
    <string name="type">目标类别:</string>
</resources>
