<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#bbbbbb">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/page_name_login"
            android:textColor="#000000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginStart="25dp"
                android:text="@string/phone_number"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/phone_numbers"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="phone"
                android:maxLength="12"
                android:background="@drawable/edit_text_selector"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="textPassword"
                android:maxLength="12"
                android:background="@drawable/edit_text_selector"/>

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="#ff0000"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registered"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:background="#ffffff"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/registered"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/forget_password"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="90dp"
                android:background="#ffffff"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/forget_password"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/decoration"
            android:contentDescription="@string/contentDescription" />

    </LinearLayout>

</LinearLayout>