<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#bbbbbb"
        android:orientation="horizontal">

        <Button
            android:id="@id/back"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/back"/>

        <TextView
            android:id="@id/textView2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/registered"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginStart="25dp"
                android:text="@string/phone_number"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@id/phone_numbers"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="phone"
                android:maxLength="11" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/captcha"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@id/ver_code"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="number"
                android:maxLength="6" />

            <Button
                android:id="@id/send_code"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/send_captcha"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="text"
                android:maxLength="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@id/new_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint"
                android:inputType="textPassword"
                android:maxLength="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/confirm_password"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/hint"
                android:baselineAligned="false"
                android:hint="@string/hint3"
                android:inputType="textPassword"
                android:maxLength="15" />

        </LinearLayout>

        <Button
            android:id="@id/registered"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#ff0000"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/registered"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/decoration"
            android:contentDescription="@string/contentDescription" />

    </LinearLayout>

</LinearLayout>